# librarian-mcp-server

./: .gitignore  LICENSE  README.md  example.mcp.json  pyproject.toml
src/librarian_mcp_server/: __init__.py  __main__.py  indexer.py  models.py  server.py
tests/: test_indexer.py  test_integration.py  test_server.py
