[project]
name = "librarian-mcp-server"
version = "0.1.0"
description = "High-performance MCP server for intelligent file indexing and lightning-fast repository search"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Dawid du Toit", email = "dawid@dutoit.co.za" }
]
keywords = ["mcp", "search", "indexing", "repository", "files", "development-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/dawiddutoit/librarian-mcp-server"
Repository = "https://github.com/dawiddutoit/librarian-mcp-server"
Issues = "https://github.com/dawiddutoit/librarian-mcp-server/issues"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
librarian-mcp-server = "librarian_mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C90", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]